fixtures/controller_environment_stage/deploy_ingress_cleanup.yaml
apiVersion: seaway.ctx.sh/v1beta1
kind: Environment
metadata:
  name: test
  namespace: default
spec:
  build:
    dockerfile: Dockerfile
    image: gcr.io/kaniko-project/executor:latest
    include:
    - ^app/
    - ^*.py$
    - ^entrypoint.sh
    - ^requirements.txt
    platform: linux/arm64
  network:
    ingress:
      enabled: false
    service:
      enabled: true
      ports:
      - name: http
        port: 8081
        protocol: TCP
  replicas: 1
  resources:
    cpu: 100m
    memory: 1Gi
  revision: 35aa10a4f94a71582dad23d54a19f9e8
  store:
    bucket: seaway
    endpoint: minio.minio.svc.cluster.local:80
    forcePathStyle: true
    localPort: 8080
    prefix: artifacts
    region: us-east-1
  vars:
    env:
    - name: ENV
      value: local
    envFrom: []
status:
  expectedRevision: 35aa10a4f94a71582dad23d54a19f9e8
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test
  namespace: default
---
apiVersion: v1
kind: Service
metadata:
  name: test
  namespace: default
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test
  namespace: default
