fixtures/controller_environment_stage/deploy_service_no_ingress_cleanup.yaml
apiVersion: seaway.ctx.sh/v1beta1
kind: SeawayConfig
metadata:
  name: default
  namespace: seaway-system
spec:
  storage:
    endpoint: minio.minio.svc.cluster.local:80
    bucket: seaway
    region: us-east-1
    forcePathStyle: true
    credentials: seaway-credentials
  registry:
    url: registry.registries.svc.cluster.local:5000
    nodePort: 31555
---
apiVersion: v1
kind: Secret
metadata:
  name: storage-credentials
  namespace: default
stringData:
  AWS_ACCESS_KEY_ID: xxxxxx
  AWS_SECRET_ACCESS_KEY: xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
---
apiVersion: seaway.ctx.sh/v1beta1
kind: Environment
metadata:
  name: test
  namespace: default
spec:
  build:
    dockerfile: Dockerfile
    image: gcr.io/kaniko-project/executor:latest
    include:
    - ^app/
    - ^*.py$
    - ^entrypoint.sh
    - ^requirements.txt
    platform: linux/arm64
  replicas: 1
  resources:
    cpu: 100m
    memory: 1Gi
  revision: 35aa10a4f94a71582dad23d54a19f9e8
  store:
    bucket: seaway
    endpoint: minio.minio.svc.cluster.local:80
    forcePathStyle: true
    localPort: 8080
    prefix: artifacts
    region: us-east-1
  vars:
    env:
    - name: ENV
      value: local
    envFrom: []
status:
  expectedRevision: 35aa10a4f94a71582dad23d54a19f9e8
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test
  namespace: default
---
apiVersion: v1
kind: Service
metadata:
  name: test
  namespace: default
